<resources>
    <string name="proj_name">Projeto Integrador</string>
    <string name="app_name">Cinéfilos</string>
    <string name="resumoApp">Cinéfilos é um aplicativo onde fãs da sétima arte podem testar conhecimentos sobre seus filmes e séries favoritas.</string>
    <string name="RANKING">RANKING</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="john_doe">John Doe</string>
    <string name="lorem_perfil">Sed augue velit, vehicula eu euismod vitae. Curabitur hendrerit, felis lobortis tempor auctor.</string>
    <string name="seguir">Seguir</string>
    <string name="desafiar">Desafiar</string>
    <string name="vitoria">Vitória</string>
    <string name="_1">1</string>
    <string name="seguidores">Seguidores</string>
    <string name="_201">201</string>
    <string name="_589">589</string>
    <string name="perguntas">Perguntas</string>
    <string name="acao">Ação</string>
    <string name="vibrar">Vibrar</string>
    <string name="notificacoes">Notificações</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="placeholder_email">johndoe@email.com</string>
    <string name="geral">Geral</string>
    <string name="placeholder_username">JohnDoe200</string>
    <string name="mudar_senha">Mudar Senha</string>
    <string name="contas_conectadas">Contas Conectadas</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="google">Google</string>
    <string name="sons">Sons</string>
    <string name="placeholder_pergunta">Qual o codinome de Beatrix Kiddo, em Kill Bill?</string>
    <string name="placeholder_tempo">00:30</string>
    <string name="placeholder_perguntas_feitas">0\nRecorde</string>
    <string name="editar">Editar</string>
    <string name="snake_charmer">Snake Charmer</string>
    <string name="cottonmouth">Cottonmouth</string>
    <string name="black_mamba">Black Mamba</string>
    <string name="placeholder_acerto">0\nAcertos</string>
    <string name="_007">007</string>
    <string name="respostas_corretas">Respostas corretas</string>
    <string name="_8_10">8/10</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="nome_filmeKB">Kill Bill: Volume 1(2003)</string>
    <string name="data_lançamentoKB">Lançamento: 23/04/2004(BR)</string>
    <string name="generos_KB">Ação, Crime</string>
    <string name="duracao_KB">Duração: 1h42m</string>
    <string name="diretos_KB">Diretor: Quentin Tarantino</string>
    <string name="avaliacao_KB">80%</string>
    <string name="avaliacaoDosUsuarios">Avaliação dos usuários</string>
    <string name="tela_inicial">Tela Inicial</string>
    <string name="modos_de_jogo">Modos de jogo</string>
    <string name="modo2">Time Limit:</string>
    <string name="modo1">Sobrevivência:</string>
    <string name="explicacao_modo1">Este modo consiste em responder o máximo de perguntas possíveis, sem errar.
        A pontuação final do jogador será a quantidade de perguntas respondidas corretamente.</string>
    <string name="explicacao_modo2">Este modo consiste em responder o máximo de perguntas possíveis, num intervalo de tempo de 2 minutos.
        A pontuação final do jogador será a quantidade de perguntas respondidas corretamente.</string>
    <string name="label_mod1">Responda as perguntas\nATÉ VOCÊ ERRAR!</string>
    <string name="label_mod2">Responda corretamente o máximo de perguntas possíveis,\nNUM TEMPO LIMITADO!</string>
    <string name="sinopse_killBill">A ex-assassina conhecida apenas como "A Noiva" acorda de um coma de quatro anos decidida a se vingar de Bill, seu ex-amante e chefe, que tentou matá-la no dia do casamento.
        Ela está motivada a acertar as contas com cada uma das pessoas envolvidas com a perda da filha, da festa de casamento e dos quatro anos da sua vida.
        Na jornada, "A Noiva" é submetida a dores físicas agoniantes ao enfrentar a inescrupulosa gangue de Bill, o Esquadrão Assassino de Víboras Mortais.</string>
    <string name="sinopse">Sinopse</string>
    <string name="diretor_quentin_tarantino">Diretor: Quentin Tarantino</string>
    <string name="kill_bill_volume_1_2003">Kill Bill: Volume 1 (2003)</string>
    <string name="sugest_o_do_dia">Sugestão do dia:</string>
    <string name="jogar">Jogar</string>
    <string name="generos_favoritos">Gêneros favoritos</string>
    <string name="editar_bio">Editar bio</string>
    <string name="salvar">Salvar</string>
    <string name="anima_o">Animação</string>
    <string name="aventura">Aventura</string>
    <string name="comedia">Comédia</string>
    <string name="crime">Crime</string>
    <string name="drama">Drama</string>
    <string name="fantasia">Fantasia</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="terror">Terror</string>
    <string name="jogador">Jogador</string>
    <string name="sobre">Sobre</string>
    <string name="TimeOut">ACABOU O TEMPO!</string>
    <string name="email_hint">Email</string>
    <string name="user_hint">Username</string>
    <string name="password_hint">Senha</string>
    <string name="cadastre_se">Não tem uma conta? Cadastra-se!</string>
    <string name="facebook_app_id">340763303680578</string>
    <string name="fb_login_protocol_scheme">fb340763303680578</string>
    <string name="time_limit">Time limit</string>
    <string name="sobreviv_ncia">Sobrevivência</string>
    <string name="correto_parab_ns">Correto! Parabéns!!</string>
    <string name="ok">Ok</string>
    <string name="_6">6</string>
    <string name="voce_errou">Você errou :(</string>
    <string name="logout">Logout</string>
    <string name="entrar">Entrar</string>
    <string name="insira_usuario">Insira o username desejado</string>
    <string name="clique_aqui_para_editar_sua_bio">Clique aqui para editar sua bio</string>
    <string name="_0">0</string>
    <string name="recorde">Recorde</string>
    <string name="acertos">Acertos</string>
    <string name="avisoSaidaQuiz">Realmente deseja sair?\n(Seu resultado atual não será contabilizado)</string>
    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>
</resources>