<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkGreyBackground"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".ui.config.ConfiguracoesFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/dados_pessoais"
            android:textColor="@color/grey"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/tv_email_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawablePadding="10dp"
            android:text="@string/placeholder_email"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_outline_email_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawablePadding="10dp"
            android:text="@string/placeholder_username"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_outline_person_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawablePadding="10dp"
            android:text="@string/mudar_senha"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_outline_lock_24" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/geral"
            android:textColor="@color/grey"
            android:textSize="21sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/vibrar"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_outline_vibration_24" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_vibrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:checked="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/notificacoes"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_outline_notifications_24" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_notificacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:checked="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvGenerosFavoritos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:text="@string/generos_favoritos"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_outline_movie_24" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/logout"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_exit_to_app_24"
                app:drawableTint="@color/grey" />

        </LinearLayout>


    </LinearLayout>

</layout>