<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackFundo"
    android:padding="10dp"
    tools:context=".ui.ModosFragment"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvModsJogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/modos_de_jogo"
        android:textSize="25sp"
        android:layout_gravity="center"/>
    
    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/black"/>
    
    <LinearLayout
        android:id="@+id/llSurvival"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/ivSurvivalMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_survivalmode"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSuvivalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/modo1"
                android:textSize="22sp"
                android:textColor="@color/yellow"/>

            <TextView
                android:id="@+id/tvlabel_surival"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_mod1"
                android:textSize="18sp"/>



        </LinearLayout>
        
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/llTimeLimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivTimeLimit"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clock_timelimit"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTLTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/modo2"
                android:textSize="22sp"
                android:textColor="@color/yellow"/>

            <TextView
                android:id="@+id/tvlabel_TL"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_mod2"
                android:textSize="18sp"/>



        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"/>



</LinearLayout>