<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.CadastroActivity"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/darkGreyBackground">

        <EditText
            android:id="@+id/edEmailCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/edUserCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/user_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"/>

        <EditText
            android:id="@+id/edPasswordCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password_hint"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cadastrar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Cadastrar"
            android:textColor="@color/black"
            android:background="@drawable/botao_redondo_amarelo"
            android:fontFamily="@font/roboto_regular"/>

    </LinearLayout>

</layout>

