<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreyBackground">

    <ImageView
        android:id="@+id/ivTrofeu"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_winner"
        app:layout_constraintTop_toBottomOf="@+id/llLogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8_10"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respostas_corretas"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/llLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            tools:layout_editor_absoluteY="16dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/icon_cinefilos"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTrofeu">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSeguir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:background="@drawable/botao_redondo_amarelo"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/compartilhar"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDesafiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/botao_redondo_transparente"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/tela_inicial"
            android:textColor="@color/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>